--- a/FrontEnd/main_page.html
+++ b/FrontEnd/main_page.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
     <head>
-
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>DOTA2 Match Predictor</title>
+        <link rel="stylesheet" href="main_page.css">
 
     </head>
 
     <body>
 
-        Click below to predict
+        <h6>About This Project</h6>
 
     </body>
 
