Made some efforts towards neatening up the code and adding information I want

--- a/FrontEnd/main_page.html
+++ b/FrontEnd/main_page.html
@@ -9,10 +9,14 @@
 
     </head>
 
+    <!--ToDo: Figure out how to implement a drop down menu where I can show my model, thought process, and implementation for this project-->
+
     <body>
 
-        <h6>About This Project</h6>
+        <h1><strong><u>Test the model for yourself!</u></strong></h1>
+            <p>Click below to take a sample match and see which team is predicted to win the game</p>
 
+        <h4>Contact Me</h4>
     </body>
 
 </html>
