--- a/FrontEnd/about_project.html
+++ b/FrontEnd/about_project.html
@@ -21,8 +21,15 @@
     </section>
 
     <!--I want to keep this as a consistent thing seen on all pages; small at the bottom, centered on the page-->
-    <section>
-        <h4>Contact Me</h4>
-    </section>
+    <!--I want to keep this as a consistent thing seen on all pages; small at the bottom, centered on the page-->
+    <footer>
+        Contact Me 
+        <!--I want to add images next to these-->
+        
+        <p><a href="mailto:ronanwb2015@outlook.com?Subject=Hello Ronan!">Email</a></p>
+        <p><a href="https://www.linkedin.com/in/ronan-buck-79002b239/">LinkedIn</a></p>
+        <p><a href="github.com/RBuck8339">GitHub</a></p>
+
+    </footer>
 
 </body>
