Added some new formatting for the footer, made consistent along files

--- a/FrontEnd/about_project.html
+++ b/FrontEnd/about_project.html
@@ -26,9 +26,7 @@
         Contact Me 
         <!--I want to add images next to these-->
         
-        <p><a href="mailto:ronanwb2015@outlook.com?Subject=Hello Ronan!">Email</a></p>
-        <p><a href="https://www.linkedin.com/in/ronan-buck-79002b239/">LinkedIn</a></p>
-        <p><a href="github.com/RBuck8339">GitHub</a></p>
+        <p><a href="mailto:ronanwb2015@outlook.com?Subject=Hello Ronan!">Email</a> <a href="https://www.linkedin.com/in/ronan-buck-79002b239/">LinkedIn</a> <a href="github.com/RBuck8339">GitHub</a></p>
 
     </footer>
 
