--- a/FrontEnd/about_project.html
+++ b/FrontEnd/about_project.html
@@ -21,13 +21,14 @@
     </section>
 
     <!--I want to keep this as a consistent thing seen on all pages; small at the bottom, centered on the page-->
-    <!--I want to keep this as a consistent thing seen on all pages; small at the bottom, centered on the page-->
-    <footer>
-        Contact Me 
-        <!--I want to add images next to these-->
-        
-        <p><a href="mailto:ronanwb2015@outlook.com?Subject=Hello Ronan!">Email</a> <a href="https://www.linkedin.com/in/ronan-buck-79002b239/">LinkedIn</a> <a href="https://www.github.com/RBuck8339">GitHub</a></p>
-
+    <footer class="contact">
+        <h1><u>Contact Me</u></h1>
+        <p>Want to ask questions? Give feedback? Just say hi?<br>Feel free to reach out and check out my socials below</p>
+        <div class="socials">
+            <div class="social-item"> <a href="mailto:ronanwb2015@outlook.com?Subject=Hello Ronan!"> <img src='images/email.png' alt="email">Email</a> </div>
+            <div class="social-item"> <a href="https://www.linkedin.com/in/ronan-buck-79002b239/" class="social-item"> <img src='images/linkedin.png' alt="linkedin">LinkedIn</a> </div>
+            <div class="social-item"> <a href="https://www.github.com/RBuck8339" class="social-item"> <img src='images/github.png' alt="github">GitHub</a> </div>
+        </div>
     </footer>
 
 </body>
