Added a table to view data

--- a/FrontEnd/main_page.html
+++ b/FrontEnd/main_page.html
@@ -14,16 +14,139 @@
     <body>
         <!--I want to put a sort of banner at the top of here and have a menu at the top too-->
         <section class="banner">
-
+            <img src="" alt="banner" class="banner-img">
 
 
         </section>
 
 
-        <section class="model-test">
+        <section class="model">
             <h1><strong><u>Test the model for yourself!</u></strong></h1>
                 <p>Either enter your own data in the fields below<br>Or click the button below to generate a sample match and see who is predicted to win the match</p>
                 <button type="button">PREDICT</button>
+        </section>
+
+        <section class="data">
+            <table>
+                <tr>
+                    <th></th>
+                    <th>Radiant Position 1</th>
+                    <th>Radiant Position 2</th>
+                    <th>Radiant Position 3</th>
+                    <th>Radiant Position 4</th>
+                    <th>Radiant Position 5</th>
+                    <th>Dire Position 1</th>
+                    <th>Dire Position 2</th>
+                    <th>Dire Position 3</th>
+                    <th>Dire Position 4</th>
+                    <th>Dire Position 5</th>
+                </tr>
+                <tr>
+                    <th>Stat 1</th>
+                    <td>3</td>
+                    <td>3</td>
+                    <td>3</td>
+                    <td>3</td>
+                    <td>3</td>
+                    <td>3</td>
+                    <td>3</td>
+                    <td>3</td>
+                    <td>3</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <th>Stat 1</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <th>Stat 1</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <th>Stat 1</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <th>Stat 1</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <th>Stat 1</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <th>Stat 1</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <th>Stat 1</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </table>
+
         </section>
 
 
